--- a/crates/edge-agent/config/last_known.json
+++ b/crates/edge-agent/config/last_known.json
@@ -1,1 +1,52 @@
-{"agent_id":"test-agent-rs232","mqtt":{"host":"localhost","port":1883,"status_topic":null},"printer":{"enabled":true,"host":"127.0.0.1","port":9100,"type":"File","path":"\\\\192.168.103.154\\EPSON TM-U220 Receipt LCC"},"tags":[{"id":"sensor_humedad_temp_1","driver":"Modbus","driver_config":{"address":0,"baud_rate":9600,"count":2,"data_bits":8,"parity":"None","port":"COM10","register_type":"Input","slave_id":84,"stop_bits":1,"timeout_ms":3000},"update_mode":{"type":"Polling","interval_ms":5000},"value_type":"Composite","value_schema":{"labels":{"hum_rel":"Humedad (%)","temp_c":"Temperatura (°C)"},"primary":"temp_c"},"enabled":true,"pipeline":{"parser":{"type":"IndexMap","keys":["temp_c","hum_rel"],"scale":0.1},"validators":[],"automations":[]},"automations":[]},{"id":"scale_1","driver":"RS232","driver_config":{"baud_rate":9600,"data_bits":8,"parity":"None","port":"COM7","stop_bits":1,"timeout_ms":500},"update_mode":{"type":"OnChange","debounce_ms":500,"timeout_ms":5000},"value_type":"Composite","value_schema":{"labels":{"unit":"Ud","value":"Peso"},"primary":"value"},"enabled":true,"pipeline":{"parser":{"type":"Custom","name":"ScaleParser","config":null},"validators":[],"automations":[{"name":"AccumulateWeight","trigger":{"type":"ConsecutiveValues","target_value":0.0,"count":1,"operator":"Greater","within_ms":1000},"action":{"type":"AccumulateData","session_id":"scale_session_1","template":"ignored_for_now"}},{"name":"PrintBatchOutcome","trigger":{"type":"ConsecutiveValues","target_value":0.0,"count":2,"operator":"LessOrEqual","within_ms":5000},"action":{"type":"PrintBatch","session_id":"scale_session_1","header_template":"LOTE DE PESAJES","footer_template":"FIN DEL LOTE"}}]},"automations":[{"name":"AccumulateWeight","trigger":{"type":"ConsecutiveValues","target_value":0.0,"count":1,"operator":"Greater","within_ms":1000},"action":{"type":"AccumulateData","session_id":"scale_session_1","template":"ignored_for_now"}},{"name":"PrintBatchOutcome","trigger":{"type":"ConsecutiveValues","target_value":0.0,"count":2,"operator":"LessOrEqual","within_ms":5000},"action":{"type":"PrintBatch","session_id":"scale_session_1","header_template":"LOTE DE PESAJES","footer_template":"FIN DEL LOTE"}}]}],"heartbeat_interval_secs":30}
+{
+  "agent_id": "test-agent-01",
+  "devices": [
+    {
+      "connection_config": {
+        "baud_rate": 9600,
+        "data_bits": 8,
+        "parity": "None",
+        "port": "COM7",
+        "stop_bits": 1,
+        "timeout_ms": 500
+      },
+      "driver": "RS232",
+      "enabled": true,
+      "id": "scale_01"
+    }
+  ],
+  "heartbeat_interval_secs": 30,
+  "mqtt": {
+    "host": "localhost",
+    "port": 1883,
+    "status_topic": null
+  },
+  "tags": [
+    {
+      "automations": [],
+      "device_id": "scale_01",
+      "driver": null,
+      "driver_config": {},
+      "enabled": true,
+      "id": "weigh_scale01",
+      "pipeline": {
+        "automations": [],
+        "parser": {
+          "config": null,
+          "name": "ScaleParser",
+          "type": "Custom"
+        },
+        "scaling": null,
+        "validators": []
+      },
+      "update_mode": {
+        "debounce_ms": 500,
+        "timeout_ms": 3000,
+        "type": "OnChange"
+      },
+      "value_schema": null,
+      "value_type": "Composite"
+    }
+  ],
+  "version": "6211f202-aa3a-40f5-9113-3f67fd249b78"
+}
