--- a/crates/infrastructure/Cargo.toml
+++ b/crates/infrastructure/Cargo.toml
@@ -23,7 +23,9 @@ config = "0.13"
 sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "sqlx-sqlite" ] }
 sea-orm-migration = "1.1"
 time = { version = "0.3", features = ["serde", "serde-human-readable"] }
+uuid = { version = "1.10", features = ["v4", "serde"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
 uuid = { version = "1.20.0", features = ["v4"] }
+migration = { path = "../migration" }
