add trend graph web app

--- a/crates/application/Cargo.toml
+++ b/crates/application/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 
 [dependencies]
 domain = { path = "../domain" }
+dashmap = "5.5"
 infrastructure = { path = "../infrastructure" }
 anyhow = { workspace = true }
 tokio = { workspace = true }
